# assimp_eigen

./: CMakeLists.txt  package.xml
include/assimp_eigen/: assimp_eigen.h
src/: assimp_eigen.cpp
